--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@google/genai": "^0.1.1",
+    "@google/genai": "^0.0.1",
     "express": "^4.18.2",
     "lucide-react": "^0.344.0",
-    "pdfjs-dist": "^4.0.379",
+    "pdfjs-dist": "4.8.69",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "xlsx": "^0.18.5"
