--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@google/genai": "^0.1.2",
+    "@google/genai": "*",
     "express": "^4.18.2",
     "lucide-react": "^0.344.0",
     "pdfjs-dist": "4.8.69",
