feat: Improve AI processing and dependency management
Enhance Gemini AI model capabilities and streamline the application's build process.

- Update `@google/genai` to v1.35.0 for access to the latest features and improvements.
- Add `heroku-postbuild` script to ensure the application is built correctly on Heroku deployments.
- Refine AI processing logic in `geminiService.ts` for better data normalization and extraction, including:
    - Improved IP class normalization (e.g., "ip-44" to "IP44").
    - Standardized energy label conversion (e.g., "A+++" to "A").
    - Enhanced handling of composite dimensions, ensuring consistent units (cm).
    - Added 'titanio' to color map.
- Update log messages in `ProcessingView.tsx` for clearer feedback during processing.
- Implement robust API key handling in `server.js` with more informative error messages.
- Enhance system instructions for the Gemini AI in `server.js` to prioritize PDF context and prevent hallucinations.

--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
+
 {
   "name": "ecom-import-ai-master",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "preinstall": "rm -rf package-lock.json node_modules",
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
-    "start": "node server.js"
+    "start": "node server.js",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "@google/genai": "*",
+    "@google/genai": "^1.35.0",
     "express": "^4.18.2",
     "lucide-react": "^0.344.0",
     "pdfjs-dist": "4.8.69",
